--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Lint
         run: npm run lint
       - name: Test
-        run: npm run test
+        run: script --quiet --return -c "npm run test" /dev/null
       - name: Copy&Paste detection
         run: npm run cpd
 
