--- a/.github/workflows/pr_testing.yml
+++ b/.github/workflows/pr_testing.yml
@@ -21,6 +21,6 @@ jobs:
       - name: Lint
         run: npm run lint
       - name: Test
-        run: npm run test
+        run: script --quiet --return -c "npm run test" /dev/null
       - name: Copy&Paste detection
         run: npm run cpd
